# The-DWG-Analyzer-Pro-V-1.0

./: .gitignore  .replit  DEPLOYMENT.md  INSTALL.md  PRODUCTION_README.md  PRODUCTION_STATUS.md  README.md  README_FILE_UPLOAD.md  app.py  collaboration.db  direct_dwg_parser.py  furniture_catalog.db  minimal_real_app.py  production_launcher.py  professional_ui.py  pyproject.toml  real_dwg_app.py  replit.md  simple_app.py  simple_dwg.py  streamlit_app.py  working_dwg_app.py
.streamlit/: config.toml
attached_assets/: DWG Analyzer 2_1750629783748.py  DWG Analyzer 3_1750629783749.py  DWG Analyzer_1750629783750.py  Pasted--WebSocket-onclose-anonymous-static-js-index-BYo0ywlm-js-774Understand-this-warning-stcore-he-1750637742720_1750637742721.txt  Pasted--sqlalchemy-exc-ArgumentError-This-app-has-encountered-an-error-The-original-error-message-is-red-1750636975907_1750636975907.txt  Pasted-C-Users-HP-Desktop-DWG-Analyzer-Expt-Pro-V-1-python-script-py-dwg-plan-dwg-module-2-1-5-web--1750638904209_1750638904210.txt  Pasted-Error-creating-polygon-from-line-network-A-linearring-requires-at-least-4-coordinates-Error-creat-1750698091627_1750698091628.txt  Pasted-Oh-no-Error-running-app-If-you-need-help-try-the-Streamlit-docs-and-forums-UTC-L-1750636141253_1750636141253.txt  Pasted-Oh-no-Error-running-app-If-you-need-help-try-the-Streamlit-docs-and-forums-UTC-L-1750636260009_1750636260010.txt  Pasted-Oh-no-Error-running-app-If-you-need-help-try-the-Streamlit-docs-and-forums-UTC-L-1750636797160_1750636797160.txt  (+2 more)
src/: advanced_ai_models.py  ai_analyzer.py  ai_integration.py  (+13 more)
